--- a/_pages/about.html
+++ b/_pages/about.html
@@ -68,12 +68,12 @@ ul.task-list li input[type="checkbox"] {
 About Me
 </h2>
 I am a <em>Lecturer (Assistant Professor) in Human Factors and Ergonomics</em> at the School of Design and Creative Arts, Loughborough University, UK. <br><br> My research focuses on <span style="color: #9d4edd"> human factors in future mobility </span>, including passenger comfort in highly automated driving, human-automated vehicle interaction, inclusive design for diverse users, and active travel. Broadly speaking, I am interested in understanding human behaviour and designing better systems for their <span style="color: #9d4edd">interaction with technology</span> 🚘 🤖 🚲. <br><br> 👩‍🎓 I received my <em>PhD</em> from <em>University of Leeds</em>, UK, as a Marie Sklodowska-Curie Fellow (2024). Before that, I obtained my <em>BEng in Optoelectronic Information Science and Engingeering</em> from the <em>University of Electronic Science and Technology of China</em> (2017) and <em>MSc in Human Technology Interaction</em> from <em>Eindhoven University of Technology</em>, The Netherlands (2019). <br><br>
-<figure align="center" class="figure">
-<img src="/images/chenanddodo.jpeg" alt="Chen Peng" width="300px" style="border-radius: 15px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);" class="figure-img">
-<figcaption>
-<i>Me and my dog Dorothy</i>
-</figcaption>
-</figure>
+<div style="text-align: center; margin: 20px 0;">
+<img src="{{ site.baseurl }}/images/chenanddodo.jpeg" alt="Chen Peng" width="400">
+<p style="font-style: italic; color: #666;">
+Me and my dog Dorothy
+</p>
+</div>
 
 </main>
 <!-- /main column -->
