research pic update

--- a/_pages/research.html
+++ b/_pages/research.html
@@ -65,6 +65,12 @@ ul.task-list li input[type="checkbox"] {
 
 
 <p>My research interests primarily lie in the domain of <strong>human-technology interaction</strong>, paricularly within the context of <strong>future mobility</strong>. I am passionate about including more marginalised groups, such as older adults, in research, to provide more <strong>inclusive</strong> solutions. I am proficient in both qualitative and quantitative, analytical approaches.</p>
+<div style="text-align: center; margin: 20px 0;">
+<img src="{{ '/images/images/ResearchPyramid.png' | relative_url }}" alt="Project Name" width="400px">
+<p style="font-style: italic; color: #666;">
+Caption for your research image
+</p>
+</div>
 <section id="previous-research" class="level2">
 <h2 class="anchored" data-anchor-id="previous-research">Previous Research</h2>
 <section id="comfort-in-automated-driving" class="level3">
@@ -94,14 +100,8 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Related project:</strong></p>
 <ul>
 <li>SHAPE-IT: Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow. Horizon Europe Marie Curie ITN. Role: ESR. <a href="https://shape-it.eu/">Link</a></li>
-<li>Hi-Drive. European Commission/FP7. Role: Researcher/Co-I. <a href="https://www.hi-drive.eu/">Link</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link</a></li>
+<li>Hi-Drive. European Commission/FP7. Role: Researcher/Co-I. <a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></li>
 </ul>
-<div style="text-align: center; margin: 20px 0;">
-<img src="{{ '/images/your-project-image.jpeg' | relative_url }}" alt="Project Name" width="400px">
-<p style="font-style: italic; color: #666;">
-Caption for your research image
-</p>
-</div>
 </section>
 <section id="human-automation-interaction" class="level3">
 <h3 class="anchored" data-anchor-id="human-automation-interaction">🦾 Human-Automation Interaction</h3>
