--- a/_pages/research.html
+++ b/_pages/research.html
@@ -66,9 +66,9 @@ ul.task-list li input[type="checkbox"] {
 
 <p>My research interests primarily lie in the domain of <strong>human-technology interaction</strong>, paricularly within the context of <strong>future mobility</strong>. I am passionate about including more marginalised groups, such as older adults, in research, to provide more <strong>inclusive</strong> solutions. I am proficient in both qualitative and quantitative, analytical approaches.</p>
 <div style="text-align: center; margin: 20px 0;">
-<img src="{{ '/images/images/ResearchPyramid.png' | relative_url }}" alt="Project Name" width="400px">
+<img src="{{ '/images/ResearchPyramid.png' | relative_url }}" alt="Research theme" width="300px">
 <p style="font-style: italic; color: #666;">
-Caption for your research image
+Overview of my research themes
 </p>
 </div>
 <section id="previous-research" class="level2">
