--- a/_pages/research.html
+++ b/_pages/research.html
@@ -64,15 +64,16 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<p>My research interests primarily lie in the domain of <strong>human-technology interaction</strong>, paricularly within the context of <strong>future mobility</strong>. I am passionate about including more marginalised groups, such as older adults, in research, to provide more <strong>inclusive</strong> solutions. I am proficient in both qualitative and quantitative, analytical approaches.</p>
+<p>My research interests primarily lie in the domain of <span style="color: #6C3082"><strong>human-technology interaction</strong></span>, paricularly within the context of <span style="color: #6C3082"><strong>future mobility</strong></span>. I am passionate about including more marginalised groups, such as older adults, in research, to provide more <span style="color: #6C3082"><strong>inclusive</strong></span> solutions. I am proficient in both qualitative and quantitative, analytical approaches.</p>
 <div style="text-align: center; margin: 20px 0;">
 <img src="{{ '/images/ResearchPyramid.png' | relative_url }}" alt="Research theme" width="450px">
 <p style="font-style: italic; color: #666;">
 Overview of my research themes
 </p>
 </div>
-<section id="previous-research" class="level2">
-<h2 class="anchored" data-anchor-id="previous-research">Previous Research</h2>
+<hr>
+<section id="previous-and-ongoing-research" class="level2">
+<h2 class="anchored" data-anchor-id="previous-and-ongoing-research">Previous and Ongoing Research</h2>
 <section id="comfort-in-automated-driving" class="level3">
 <h3 class="anchored" data-anchor-id="comfort-in-automated-driving">🚘 Comfort in Automated Driving</h3>
 <p><em>My doctoral research focuses on passenger comfort in automated driving, investigating the role of driving styles and the conceptualisation of comfort, and my postdoctoral research extends this understanding to real-world settings.</em></p>
@@ -84,24 +85,29 @@ Overview of my research themes
 <li>Conceptualisation of comfort</li>
 <li>Comfort needs of older passengers</li>
 </ul>
-<p><strong>Related publications:</strong></p>
+<section id="related-publications" class="level4">
+<h4 class="anchored" data-anchor-id="related-publications"><strong>Related publications:</strong></h4>
 <ul>
-<li><p>PhD Thesis: Understanding and Improving User Comfort in Automated Driving <a href="https://etheses.whiterose.ac.uk/id/eprint/34995/">Link to thesis</a>. Supervisors: Prof Natasha Merat, Prof Marjan Hagenzieker, and Dr Chongfeng Wei.</p></li>
-<li><p>Peng, C., Wei, C., Solernou, A., Hagenzieker, M., &amp; Merat, N. (2024). User comfort and naturalness of automated driving: The effect of vehicle kinematics and proxemics on subjective response. Applied Ergonomics. <a href="https://doi.org/10.1016/j.apergo.2024.104397">Link</a></p></li>
-<li><p>Peng, C., Horn, S., Madigan, R., Marberger, C., Lee, J., Krems, J., Beggiato, M., Romano, R., Wei, C., Wooldridge, E., Hagenzieker, M., &amp; Merat, N. (2024). Conceptualising user comfort in automated driving: Findings from an expert group workshop. Transportation Research Interdisciplinary Perspectives.<a href="https://doi.org/10.1016/j.trip.2024.101070">Link</a></p></li>
-<li><p>Peng, C., Merat, N., Romano, R., Hajiseyedjavadi, F., Paschalidis, E., Wei, C., Radhakrishnan, V., Solernou, A., Forster, D., &amp; Boer, E. (2022). Drivers’ Evaluation of Different Automated Driving Styles: Is It both Comfortable and Natural? Human Factors.<a href="https://doi.org/10.1177/00187208221113448">Link</a></p></li>
-<li><p>Peng, C., Öztürk, İ., Nordhoff, S., Madigan, R., Hoogendoorn-Lanser, S., Hagenzieker, M., &amp; Merat, N. Passenger comfort in automated vehicles on roads: Insights from younger and older adults. Under Review.</p></li>
-<li><p>Peng, C., Carlowitz, S., Madigan, R., Schulz, M., Osswalt, S., Schultz, A., &amp; Merat, N., Optimal Lateral Acceleration for Different Levels of Automated Driving: A Test Track Study of Passenger Evaluation for Curve Negotiation. Under review.</p></li>
-<li><p>Peng, C., Bazilinskyy, P., Yu, Y., and Merat, N. (2025). Measuring Passengers’ Comfort and Perceived Safety in Automated Driving: Good Practices, Challenges, and Opportunities. In 17th International Conference on Automotive User Interfaces and Interactive Vehicular Applications (AutomotiveUI Adjunct ’25), September 21–25, 2025, Brisbane, QLD, Australia. <a href="https://dl.acm.org/doi/full/10.1145/3744335.3749142">Link</a></p></li>
-<li><p>Peng, C., Öztürk, İ., Nordhoff, S., Madigan, R., Hoogendoorn-Lanser, S., Hagenzieker, M., &amp; Merat, N (2025). Older passengers’ expectations about highly automated driving: Implications for inclusive designs. In 17th International Conference on Automotive User Interfaces and Interactive Vehicular Applications (AutomotiveUI Adjunct ’25), September 21–25, 2025, Brisbane, QLD, Australia. <a href="https://dl.acm.org/doi/full/10.1145/3744335.3758501">Link</a></p></li>
-<li><p>Peng, C., Öztürk, İ., Nordhoff, S., Madigan, R., Hoogendoorn-Lanser, S., Hagenzieker, M., &amp; Merat, N. (2023). Exploring user comfort in automated driving: A qualitative study with younger and older users using the Wizard-Of-Oz method. 15th International Conference on Automotive User Interfaces and Interactive Vehicular Applications (AutomotiveUI ’23 Adjunct), Ingolstadt, Germany. <a href="https://dl.acm.org/doi/abs/10.1145/3581961.3609853">Link</a></p></li>
-<li><p>Peng, C., Hajiseyedjavadi, F., &amp; Merat, N. (2022). A comparison of two methodologies for subjective evaluation of comfort in automated vehicles. The 12th International Conference on Methods and Techniques in Behavioural Research and 6th Seminar on Behavioural Methods, May, 192–199. <a href="https://doi.org/10.6084/m9.figshare.20066849.v1">Link</a></p></li>
+<li><p>📚 PhD Thesis: <a href="https://etheses.whiterose.ac.uk/id/eprint/34995/">Understanding and Improving User Comfort in Automated Driving</a>. Supervisors: Prof Natasha Merat, Prof Marjan Hagenzieker, and Dr Chongfeng Wei.</p></li>
+<li><p>📘 Peng, C., Wei, C., Solernou, A., Hagenzieker, M., &amp; Merat, N. (2024). User comfort and naturalness of automated driving: The effect of vehicle kinematics and proxemics on subjective response. Applied Ergonomics. <a href="https://doi.org/10.1016/j.apergo.2024.104397">Link</a></p></li>
+<li><p>📘 Peng, C., Horn, S., Madigan, R., Marberger, C., Lee, J., Krems, J., Beggiato, M., Romano, R., Wei, C., Wooldridge, E., Hagenzieker, M., &amp; Merat, N. (2024). Conceptualising user comfort in automated driving: Findings from an expert group workshop. Transportation Research Interdisciplinary Perspectives.<a href="https://doi.org/10.1016/j.trip.2024.101070">Link</a></p></li>
+<li><p>📘 Peng, C., Merat, N., Romano, R., Hajiseyedjavadi, F., Paschalidis, E., Wei, C., Radhakrishnan, V., Solernou, A., Forster, D., &amp; Boer, E. (2022). Drivers’ Evaluation of Different Automated Driving Styles: Is It both Comfortable and Natural? Human Factors.<a href="https://doi.org/10.1177/00187208221113448">Link</a></p></li>
+<li><p>📘 Peng, C., Öztürk, İ., Nordhoff, S., Madigan, R., Hoogendoorn-Lanser, S., Hagenzieker, M., &amp; Merat, N. Passenger comfort in automated vehicles on roads: Insights from younger and older adults. Under Review.</p></li>
+<li><p>📘 Peng, C., Carlowitz, S., Madigan, R., Schulz, M., Osswalt, S., Schultz, A., &amp; Merat, N., Optimal Lateral Acceleration for Different Levels of Automated Driving: A Test Track Study of Passenger Evaluation for Curve Negotiation. Under review.</p></li>
+<li><p>👩‍🏫 Peng, C., Bazilinskyy, P., Yu, Y., and Merat, N. (2025). Measuring Passengers’ Comfort and Perceived Safety in Automated Driving: Good Practices, Challenges, and Opportunities. In 17th International Conference on Automotive User Interfaces and Interactive Vehicular Applications (AutomotiveUI Adjunct ’25), September 21–25, 2025, Brisbane, QLD, Australia. <a href="https://dl.acm.org/doi/full/10.1145/3744335.3749142">Link</a></p></li>
+<li><p>👩‍🏫 Peng, C., Öztürk, İ., Nordhoff, S., Madigan, R., Hoogendoorn-Lanser, S., Hagenzieker, M., &amp; Merat, N (2025). Older passengers’ expectations about highly automated driving: Implications for inclusive designs. In 17th International Conference on Automotive User Interfaces and Interactive Vehicular Applications (AutomotiveUI Adjunct ’25), September 21–25, 2025, Brisbane, QLD, Australia. <a href="https://dl.acm.org/doi/full/10.1145/3744335.3758501">Link</a></p></li>
+<li><p>👩‍🏫 Peng, C., Öztürk, İ., Nordhoff, S., Madigan, R., Hoogendoorn-Lanser, S., Hagenzieker, M., &amp; Merat, N. (2023). Exploring user comfort in automated driving: A qualitative study with younger and older users using the Wizard-Of-Oz method. 15th International Conference on Automotive User Interfaces and Interactive Vehicular Applications (AutomotiveUI ’23 Adjunct), Ingolstadt, Germany. <a href="https://dl.acm.org/doi/abs/10.1145/3581961.3609853">Link</a></p></li>
+<li><p>👩‍🏫 Peng, C., Hajiseyedjavadi, F., &amp; Merat, N. (2022). A comparison of two methodologies for subjective evaluation of comfort in automated vehicles. The 12th International Conference on Methods and Techniques in Behavioural Research and 6th Seminar on Behavioural Methods, May, 192–199. <a href="https://doi.org/10.6084/m9.figshare.20066849.v1">Link</a></p></li>
 </ul>
-<p><strong>Related project:</strong></p>
+</section>
+<section id="related-projects" class="level4">
+<h4 class="anchored" data-anchor-id="related-projects"><strong>Related projects:</strong></h4>
 <ul>
-<li>SHAPE-IT: Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow. Horizon Europe Marie Curie ITN. Role: ESR. <a href="https://shape-it.eu/">Link</a></li>
-<li>Hi-Drive. European Commission/FP7. Role: Researcher/Co-I. <a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></li>
+<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>SHAPE-IT</strong></span> Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow.| <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN. <a href="https://shape-it.eu/">Link</a></li>
+<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher/Co-I | European Commission/FP7.<a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></li>
 </ul>
+<hr>
+</section>
 </section>
 <section id="human-automation-interaction" class="level3">
 <h3 class="anchored" data-anchor-id="human-automation-interaction">🦾 Human-Automation Interaction</h3>
@@ -109,15 +115,20 @@ Overview of my research themes
 <li>Near-distance communication between users and autonomous personal mobility vehicle</li>
 <li>Effect of eHMI on onboard users’ feelings</li>
 </ul>
-<p><strong>Related publications:</strong></p>
+<section id="related-publications-1" class="level4">
+<h4 class="anchored" data-anchor-id="related-publications-1"><strong>Related publications:</strong></h4>
 <ul>
-<li>Liu, H., Li, Y., Zeng, Z., Cheng, H., Peng, C., &amp; Wada, T. (2024). Is Silent eHMI Enough? A Passenger-Centric Study on Effective eHMI for Autonomous Personal Mobility Vehicles in the Field. International Journal of Human–Computer Interaction. https://doi.org/10.1080/10447318.2024.2306426</li>
-<li>Liu, H., Li, Y., Zeng, Z., Cheng, H., Peng, C., &amp; Wada, T. (2025). Inspiring External Human-Machine Interface Designs for Autonomous Personal Mobility Vehicle: Causal Discovering the Influence of Passengers’ Personality Traits on User Experience. 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2025), Hangzhou, China. https://doi.org/10.1109/IROS60139.2025.11246801</li>
+<li><p>📘 Liu, H., Li, Y., Zeng, Z., Cheng, H., Peng, C., &amp; Wada, T. (2024). Is Silent eHMI Enough? A Passenger-Centric Study on Effective eHMI for Autonomous Personal Mobility Vehicles in the Field. International Journal of Human–Computer Interaction.<a href="https://doi.org/10.1080/10447318.2024.2306426">Link</a></p></li>
+<li><p>👩‍🏫 Liu, H., Li, Y., Zeng, Z., Cheng, H., Peng, C., &amp; Wada, T. (2025). Inspiring External Human-Machine Interface Designs for Autonomous Personal Mobility Vehicle: Causal Discovering the Influence of Passengers’ Personality Traits on User Experience. 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2025), Hangzhou, China.<a href="https://doi.org/10.1109/IROS60139.2025.11246801">Linke</a></p></li>
 </ul>
-<p><strong>Related project:</strong></p>
+</section>
+<section id="related-projects-1" class="level4">
+<h4 class="anchored" data-anchor-id="related-projects-1"><strong>Related projects:</strong></h4>
 <ul>
-<li>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around advanced driver assistance systems. British Academy. Role: Co-I. <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></li>
+<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around advanced driver assistance systems</strong></span> | <strong>Role:</strong> Co-I | British Academy.<a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></li>
 </ul>
+<hr>
+</section>
 </section>
 <section id="road-safety-and-e-mobility" class="level3">
 <h3 class="anchored" data-anchor-id="road-safety-and-e-mobility">🚴 Road Safety and e-Mobility</h3>
@@ -125,10 +136,13 @@ Overview of my research themes
 <li>Factors influencing road safety and e-mobility users</li>
 <li>Inequalities and marginalised groups</li>
 </ul>
-<p><strong>Related project:</strong></p>
+<section id="related-projects-2" class="level4">
+<h4 class="anchored" data-anchor-id="related-projects-2"><strong>Related projects:</strong></h4>
 <ul>
-<li>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link to project</a>. Funded by the Road Safety Trust (2025-2026). Role: Researcher.</li>
+<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust. <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></li>
 </ul>
+<hr>
+</section>
 </section>
 <section id="human-technology-interaction" class="level3">
 <h3 class="anchored" data-anchor-id="human-technology-interaction">🤖 Human-Technology Interaction</h3>
@@ -136,10 +150,12 @@ Overview of my research themes
 <li>Vibrotactile cues for VR users</li>
 <li>Human-robot interaction</li>
 </ul>
-<p><strong>Related work:</strong></p>
+<section id="related-work" class="level4">
+<h4 class="anchored" data-anchor-id="related-work"><strong>Related work:</strong></h4>
 <ul>
-<li>Master’s Thesis: Novel Sensorimotor Contingencies in VR: Effects of Vibrotactile Directional Cues on Perceptual Integration and Presence. Eindhoven University of Technology, The Netherlands. Supervisor: dr. ir. Antal Haans, and prof.dr. Wijnand IJsselsteijn. <a href="https://pure.tue.nl/ws/portalfiles/portal/135539724/Peng_Master_Thesis_report_final.pdf">Link</a></li>
+<li>📚 Master’s Thesis: Novel Sensorimotor Contingencies in VR: Effects of Vibrotactile Directional Cues on Perceptual Integration and Presence. Eindhoven University of Technology, The Netherlands. Supervisor: dr. ir. Antal Haans, and prof.dr. Wijnand IJsselsteijn. <a href="https://pure.tue.nl/ws/portalfiles/portal/135539724/Peng_Master_Thesis_report_final.pdf">Link</a></li>
 </ul>
+</section>
 </section>
 </section>
 
