--- a/_pages/research.html
+++ b/_pages/research.html
@@ -102,10 +102,7 @@ Overview of my research themes
 </section>
 <section id="related-projects" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects"><strong>Related projects:</strong></h4>
-<ul>
-<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>SHAPE-IT</strong></span> Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow.| <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN. <a href="https://shape-it.eu/">Link</a></li>
-<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher/Co-I | European Commission/FP7.<a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></li>
-</ul>
+<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>SHAPE-IT</strong></span> Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow.| <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN. | <a href="https://shape-it.eu/">Link</a> <span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher/Co-I | European Commission/FP7. | <a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></p>
 <hr>
 </section>
 </section>
@@ -124,9 +121,7 @@ Overview of my research themes
 </section>
 <section id="related-projects-1" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-1"><strong>Related projects:</strong></h4>
-<ul>
-<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around advanced driver assistance systems</strong></span> | <strong>Role:</strong> Co-I | British Academy.<a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></li>
-</ul>
+<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around advanced driver assistance systems</strong></span> | <strong>Role:</strong> Co-I | British Academy. | <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></p>
 <hr>
 </section>
 </section>
@@ -138,9 +133,7 @@ Overview of my research themes
 </ul>
 <section id="related-projects-2" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-2"><strong>Related projects:</strong></h4>
-<ul>
-<li><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust. <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></li>
-</ul>
+<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
 <hr>
 </section>
 </section>
