--- a/_pages/research.html
+++ b/_pages/research.html
@@ -102,7 +102,12 @@ Overview of my research themes
 </section>
 <section id="related-projects" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects"><strong>Related projects:</strong></h4>
-<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>SHAPE-IT</strong></span> Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow.| <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN. | <a href="https://shape-it.eu/">Link</a> <span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher/Co-I | European Commission/FP7. | <a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></p>
+<div style="margin-left: 25px; margin-bottom: 10px;">
+<span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>SHAPE-IT</strong></span> Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow.| <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN. | <a href="https://shape-it.eu/">Link</a>
+</div>
+<div style="margin-left: 25px; margin-bottom: 10px;">
+<span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher/Co-I | European Commission/FP7. | <a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a>
+</div>
 <hr>
 </section>
 </section>
@@ -116,12 +121,14 @@ Overview of my research themes
 <h4 class="anchored" data-anchor-id="related-publications-1"><strong>Related publications:</strong></h4>
 <ul>
 <li><p>📘 Liu, H., Li, Y., Zeng, Z., Cheng, H., Peng, C., &amp; Wada, T. (2024). Is Silent eHMI Enough? A Passenger-Centric Study on Effective eHMI for Autonomous Personal Mobility Vehicles in the Field. International Journal of Human–Computer Interaction.<a href="https://doi.org/10.1080/10447318.2024.2306426">Link</a></p></li>
-<li><p>👩‍🏫 Liu, H., Li, Y., Zeng, Z., Cheng, H., Peng, C., &amp; Wada, T. (2025). Inspiring External Human-Machine Interface Designs for Autonomous Personal Mobility Vehicle: Causal Discovering the Influence of Passengers’ Personality Traits on User Experience. 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2025), Hangzhou, China.<a href="https://doi.org/10.1109/IROS60139.2025.11246801">Linke</a></p></li>
+<li><p>👩‍🏫 Liu, H., Li, Y., Zeng, Z., Cheng, H., Peng, C., &amp; Wada, T. (2025). Inspiring External Human-Machine Interface Designs for Autonomous Personal Mobility Vehicle: Causal Discovering the Influence of Passengers’ Personality Traits on User Experience. 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS 2025), Hangzhou, China.<a href="https://doi.org/10.1109/IROS60139.2025.11246801">Link</a></p></li>
 </ul>
 </section>
 <section id="related-projects-1" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-1"><strong>Related projects:</strong></h4>
-<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around advanced driver assistance systems</strong></span> | <strong>Role:</strong> Co-I | British Academy. | <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></p>
+<div style="margin-left: 25px; margin-bottom: 10px;">
+<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"> <strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around advanced driver assistance systems</strong></span> | <strong>Role:</strong> Co-I | British Academy. | <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></p>
+</div>
 <hr>
 </section>
 </section>
@@ -133,7 +140,9 @@ Overview of my research themes
 </ul>
 <section id="related-projects-2" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-2"><strong>Related projects:</strong></h4>
-<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
+<div style="margin-left: 25px; margin-bottom: 10px;">
+<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"> <strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
+</div>
 <hr>
 </section>
 </section>
