--- a/_pages/research.html
+++ b/_pages/research.html
@@ -101,12 +101,12 @@ Overview of my research themes
 </ul>
 </section>
 <section id="related-projects" class="level4">
-<h4 class="anchored" data-anchor-id="related-projects"><strong>Related projects:</strong></h4>
-<div style="margin-left: 25px; margin-bottom: 10px;">
-<span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>SHAPE-IT</strong></span> Supporting the Interaction of Humans and Automated Vehicles: Preparing for the Environment of Tomorrow.| <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN. | <a href="https://shape-it.eu/">Link</a>
+<h4 class="anchored" data-anchor-id="related-projects"><strong>Related Projects</strong></h4>
+<div style="margin-left: 25px; margin-bottom: 12px; line-height: 1.6;">
+<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>SHAPE-IT: Supporting the Interaction of Humans and Automated Vehicles</strong></span> | <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN | <a href="https://shape-it.eu/">Link</a></p>
 </div>
-<div style="margin-left: 25px; margin-bottom: 10px;">
-<span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher/Co-I | European Commission/FP7. | <a href="https://www.hi-drive.eu/">Link 1</a> <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a>
+<div style="margin-left: 25px; margin-bottom: 12px; line-height: 1.6;">
+<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher, Co-I | European Commission/FP7 | <a href="https://www.hi-drive.eu/">Link 1</a> &amp; <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></p>
 </div>
 <hr>
 </section>
@@ -126,8 +126,8 @@ Overview of my research themes
 </section>
 <section id="related-projects-1" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-1"><strong>Related projects:</strong></h4>
-<div style="margin-left: 25px; margin-bottom: 10px;">
-<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"> <strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around advanced driver assistance systems</strong></span> | <strong>Role:</strong> Co-I | British Academy. | <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></p>
+<div style="margin-left: 25px; margin-bottom: 15px; line-height: 1.6;">
+<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>Humans meet technology behind the wheel: Understanding drivers’ feelings and behaviours around ADAS</strong></span> | <strong>Role:</strong> Co-I | British Academy | <a href="https://environment.leeds.ac.uk/research-project/1/faculty-of-environment/2192/humans-meet-technology-behind-the-wheel-understanding-drivers-feelings-and-behaviours-around-advanced-driver-assistance-systems">Link</a></p>
 </div>
 <hr>
 </section>
@@ -140,8 +140,8 @@ Overview of my research themes
 </ul>
 <section id="related-projects-2" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-2"><strong>Related projects:</strong></h4>
-<div style="margin-left: 25px; margin-bottom: 10px;">
-<p><span style="background-color: #e7f3fe; padding: 2px 8px; border-radius: 10px;"> <strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
+<div style="margin-left: 25px; margin-bottom: 15px; line-height: 1.6;">
+<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust (2025-2026) | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
 </div>
 <hr>
 </section>
