--- a/_pages/research.html
+++ b/_pages/research.html
@@ -103,7 +103,7 @@ Overview of my research themes
 <section id="related-projects" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects"><strong>Related Projects</strong></h4>
 <div style="margin-left: 25px; margin-bottom: 12px; line-height: 1.6;">
-<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>SHAPE-IT: Supporting the Interaction of Humans and Automated Vehicles</strong></span> | <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN | <a href="https://shape-it.eu/">Link</a></p>
+<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"> <strong>SHAPE-IT: Supporting the Interaction of Humans and Automated Vehicles</strong> </span> | <strong>Role:</strong> ESR | Horizon Europe Marie Curie ITN | <a href="https://shape-it.eu/">Link</a></p>
 </div>
 <div style="margin-left: 25px; margin-bottom: 12px; line-height: 1.6;">
 <p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>Hi-Drive</strong></span> | <strong>Role:</strong> Researcher, Co-I | European Commission/FP7 | <a href="https://www.hi-drive.eu/">Link 1</a> &amp; <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2108/hi-drive">Link 2</a></p>
@@ -141,7 +141,7 @@ Overview of my research themes
 <section id="related-projects-2" class="level4">
 <h4 class="anchored" data-anchor-id="related-projects-2"><strong>Related projects:</strong></h4>
 <div style="margin-left: 25px; margin-bottom: 15px; line-height: 1.6;">
-<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust (2025-2026) | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
+<p><span style="background-color: #F4EEF7; color: #4A1863; padding: 3px 10px; border-radius: 8px; border: 1px solid #D0BCDA;"><strong>e-SAFE: Equity, Social Determinants, Anti-social Behaviour and Future E-Mobility</strong></span> | <strong>Role:</strong> Researcher | Road Safety Trust | <a href="https://environment.leeds.ac.uk/dir-record/research-projects/2151/e-safe-equity-social-determinants-anti-social-behaviour-and-future-e-mobility">Link</a></p>
 </div>
 <hr>
 </section>
